--- a/frontend/src/paginas/style/login.scss
+++ b/frontend/src/paginas/style/login.scss
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
- background: url(LOGO_SORDOMUDOS.pdf);
+ 
   background-size: cover;
   background-attachment: fixed;
 }
@@ -22,7 +22,7 @@ h1{
   color: #28a77d;
   font-size: 40px;
 }
-input[type="text"],
+input[type="email"],
 input[type="password"]{
   font-size: 20px;
   width: 82%;
